# rust-k8-ui

./: Cargo.toml  README.md
src/: main.rs
src/k8ui/: appstate.rs  k8api.rs  mod.rs  my_thread.rs  ui_component_bus.rs  uinormdz.rs
src/k8ui/components/: container_column.rs  log_window.rs  mod.rs
